TP-2285: Addressing issue with pinterest icon not showing on featured articles and artcicles page

--- a/drupal/sites/all/themes/tp4/sass/page/_openpublish_article.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_openpublish_article.scss
@@ -135,21 +135,18 @@
             }
             
             @include breakpoint($breakpoint-mobile) {
-                &.tp-social-pinterest,
                 &.tp-social-reddit {
                     display: block;
                 }
             }
 
             @include breakpoint($breakpoint-tablet) {
-                &.tp-social-pinterest,
                 &.tp-social-reddit {
                     display: none;
                 }
             }
 
             @include breakpoint($breakpoint-desktop) {
-                &.tp-social-pinterest,
                 &.tp-social-reddit {
                     display: none;
                 }
